# REST_Restaurant

./: .db_env  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yaml  pyproject.toml
src/: database.py  main.py  settings.py
src/dish/: crud.py  models.py  router.py  schemas.py
src/menu/: crud.py  models.py  router.py  schemas.py
src/submenu/: crud.py  models.py  router.py  schemas.py
