[tool.poetry]
name = "rest-restaurant"
version = "0.1.0"
description = ""
authors = ["serega <serega.taraskin.1999@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
uvicorn = "^0.23.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
